#
# ibus-freearray - FreeArray for The Input Bus
#
# Copyright (c) 2010
# 	Yong-Siang Shih (Shaform) <shaform at gmail.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
# See the file "COPYING" for information on usage and redistribution
# of this file.

chewing_data = \
	dict.dat \
	fonetree.dat \
	ph_index.dat \
	symbols.dat \
	$(NULL)

extra_data = \
	NOTE \
	$(NULL)

datatable_DATA = \
	$(chewing_data) \
	$(NULL)

datatabledir = $(pkgdatadir)/data

EXTRA_DIST = \
	$(chewing_data) \
	$(extra_data) \
	$(NULL)
